feat: cria endpoint para mover colunas
