# docs/swagger.json
@@ -2077,6 +2077,10 @@
                 "name": {
                     "type": "string",
                     "example": "new-column1"
+                },
+                "position": {
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
